<resources>
    <string name="app_name">在矫通</string>
    <string name="home">首页</string>
    <string name="startmark">*</string>
    <string name="server">服务</string>
    <string name="apply">申请</string>
    <string name="mine">我的</string>
    <string name="version">V1.10</string>

    <string name="submit">提交</string>
    <string name="server_zsxx">掌上学习</string>
    <string name="server_rcbg">日常报告</string>
    <string name="server_gyhd">公益活动</string>
    <string name="server_xlfd">心理辅导</string>
    <string name="server_shqy">社会权益</string>
    <string name="server_bwjy">保外就医</string>
    <string name="server_kcxx">课程学习</string>
    <string name="server_xxxd">学习心得</string>
    <string name="server_xxjl">学习记录</string>
    <string name="server_bgjl">报告记录</string>
    <string name="server_dkjl">打卡记录</string>
    <string name="server_sqbk">申请补卡</string>
    <string name="server_bkjl">补卡记录</string>
    <string name="server_xlzx">心理咨询</string>
    <string name="server_xlcp">心理测评</string>
    <string name="server_zxjl">咨询记录</string>
    <string name="server_cpjl">测评记录</string>
    <string name="server_xlsd">心理疏导</string>
    <string name="server_jyzd">就业指导</string>
    <string name="server_jnpx">职业技能培训</string>
    <string name="server_flyz">法律援助</string>
    <string name="server_qlbz">权利保障</string>
    <string name="server_shbx">社会保险</string>
    <string name="server_shjz">社会救助</string>
    <string name="server_zpxx">招聘信息</string>
    <string name="server_tdjl">投递记录</string>
    <string name="server_bqfc">病情复查</string>
    <string name="server_bqfcjl">病情复查记录</string>
    <string name="server_qwzxsj">期望咨询时间:</string>
    <string name="server_qxznxyyzxdsj">请选择您想预约咨询的时间</string>
    <string name="server_zxfs">咨询方式:</string>
    <string name="server_zxly">咨询理由:</string>
    <string name="server_xxzx">线下咨询</string>
    <string name="server_zwxx">职位信息</string>
    <string name="server_gw">岗位:</string>
    <string name="server_xzdy">薪资待遇:</string>
    <string name="server_xlyq">学历要求:</string>
    <string name="server_xbyq">性别要求:</string>
    <string name="server_sftgzs">是否提供住宿:</string>
    <string name="server_syq">试用期:</string>
    <string name="server_ygrs">用工人数:</string>
    <string name="server_fl">分类:</string>
    <string name="server_jnjyyq">技能、经验要求:</string>
    <string name="server_zwms">职位描述</string>
    <string name="server_zwmc">职位名称</string>
    <string name="server_qyxx">企业信息</string>
    <string name="server_qymc">企业名称:</string>
    <string name="server_dz">地址:</string>
    <string name="server_dh">电话：</string>
    <string name="server_lxr">联系人:</string>
    <string name="server_qyjs">企业介绍:</string>
    <string name="server_td">投递</string>
    <string name="server_yxgw">意向岗位:</string>
    <string name="server_bgfs">报告方式:</string>
    <string name="server_qwxz">期望薪资:</string>
    <string name="server_yxdw">意向单位:</string>
    <string name="server_jnjtc">技能及特长:</string>
    <string name="server_gzjl">工作经历:</string>
    <string name="server_qxzbgfs">请选择报告方式</string>
    <string name="server_bgnr">报告内容:</string>
    <string name="server_zzbg">纸质报告:</string>
    <string name="server_jlr">记录人:</string>
    <string name="server_jlsj">记录时间:</string>
    <string name="server_clsc">材料上传:</string>
    <string name="server_qsrjlr">请输入记录人</string>
    <string name="server_qsrndyxgw">请输入您的意向岗位</string>
    <string name="server_qsrndjnjtc">请输入您的技能及特长</string>
    <string name="server_qsrndsxhbnr">请输入您的思想汇报内容</string>
    <string name="server_qxzjlsj">请选择记录时间</string>
    <string name="server_qsrnyyxddwmc">请输入您有意向的单位名称</string>
    <string name="server_qsrndgzjl">请描述您的工作经历</string>
    <string name="server_qsrndqwxz">请输入您的期望薪资</string>
    <string name="server_fbsj">发布时间：</string>
    <string name="server_tjsj">提交时间：</string>
    <string name="server_spzt">审批状态：</string>
    <string name="server_spyj2">审批意见：</string>
    <string name="server_qzxx">求职信息</string>
    <string name="server_tjxx">提交信息</string>
    <string name="server_sssq">申述申请：</string>
    <string name="server_knqk">困难情况：</string>
    <string name="server_tp">图片：</string>
    <string name="server_bksm">补卡说明：</string>
    <string name="server_hdmc">活动名称</string>
    <string name="server_qsrndbksm">请输入您的补卡说明</string>
    <string name="server_zycp">职业测评</string>
    <string name="server_rgtzcp">人格特征测评</string>


    <string name="server_qsrnxyxlzxdly">请输入你需要心里咨询的理由</string>
    <string name="today_performance">今日表现</string>
    <string name="notification">通知消息</string>
    <string name="current_location">当前定位</string>
    <string name="welcome_to_app">欢迎登录在矫通</string>
    <string name="login_tips">依 法 矫 正 重 塑 美 好 人 生</string>
    <string name="login_card_number">身份证号码</string>
    <string name="start_face_authentication">开始人脸识别认证</string>
    <string name="provide_server">法宣云提供计算服务</string>
    <string name="plz_input_valid_number">请输入有效身份证号码</string>
    <string name="server_sqsj">申请时间：</string>
    <string name="server_spjg">审批结果：</string>
    <string name="face_compare_tips">拍摄您本人人脸，请确保正对手机，光线充足</string>
    <string name="end_of_day">距离矫正结束还有</string>
    <string name="get_user_info_fail">获取用户信息失败</string>
    <string name="get_banner_fail">获取banner失败</string>
    <string name="day">天</string>
    <string name="excellent">优秀</string>
    <string name="more">更多》</string>
    <string name="today">今天</string>
    <string name="one_week">近一周</string>
    <string name="all">全部</string>
    <string name="notification_message">通知消息</string>
    <string name="apply_record">申请记录</string>
    <string name="login">登录</string>
    <string name="approve_success">审批通过</string>
    <string name="under_approve">审批中</string>
    <string name="approve_failed">审批未通过</string>
    <string name="asterisk">*</string>
    <string name="start_time">开始时间：</string>
    <string name="please_select_start_time">请选择开始时间</string>
    <string name="end_time">结束时间：</string>
    <string name="please_select_end_time">请选择结束时间</string>
    <string name="please_select_destination">请选择外出目的地</string>
    <string name="destination_address">目的地详细地址：</string>
    <string name="please_input_destination_address">请输入外出目的地详细地址</string>
    <string name="leave_reason">请假理由：</string>
    <string name="please_input_reason">请输入外出的事由</string>
    <string name="text_count">0/500</string>
    <string name="upload_image">上传材料：</string>
    <string name="ask_for_leave">请假</string>
    <string name="server_spsj">审批时间</string>
    <string name="server_spsj2">审批时间：</string>
    <string name="server_spyj">审批意见</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="destination">目的地</string>
    <string name="destination_with_colon">目的地：</string>
    <string name="move_start_time">拟迁往时间：</string>
    <string name="please_select_move_start_time">请选择拟迁往时间</string>
    <string name="move_destination">拟迁入地：</string>
    <string name="please_select_move_destination">请选择拟迁入地所在省市区街道</string>
    <string name="move_destination_address">拟迁入地详细地址：</string>
    <string name="please_input_move_destination_address">请输入拟迁入地详细地址</string>
    <string name="move_reason">居住地变更理由：</string>
    <string name="please_input_move_reason">请输入居住地变更理由</string>
    <string name="application_for_change_of_residential_address">居住地址变更申请</string>
    <string name="certain_area_address">特定区域详细地址：</string>
    <string name="enter_reason">进入理由：</string>
    <string name="reason">理由：</string>
    <string name="please_input_enter_reason">请输入进入特定区域的理由</string>
    <string name="application_for_enter_certain_area">进入特定区域申请</string>
    <string name="reception_time">会客时间：</string>
    <string name="reception_type">会见人类型：</string>
    <string name="please_select_reception_type">请选择会见人类型</string>
    <string name="reception_name">会见人姓名：</string>
    <string name="please_input_reception_name">请输入会见人姓名</string>
    <string name="reception_reason">会客理由：</string>
    <string name="please_input_reception_reason">请输入会客的理由</string>
    <string name="reception_sex">会见人性别：</string>
    <string name="please_select_reception_sex">请选择会见人性别</string>
    <string name="reception_application">会客申请</string>
    <string name="cancellation">销假</string>
    <string name="mine_bjjl">报警记录</string>
    <string name="mine_wlxx">围栏信息</string>
    <string name="mine_sjjy">数据校验</string>
    <string name="mine_xxhhc">信息化核查</string>
    <string name="mine_jgjl">警告记录</string>
    <string name="mine_zaglcfjl">治安管理处罚记录</string>
    <string name="mine_bz">帮助</string>
    <string name="mine_dqbb">当前版本</string>
    <string name="mine_yhxy">用户协议</string>
    <string name="mine_zqtysxy">在矫通隐私协议</string>
    <string name="mine_gy">关于</string>
    <string name="mine_zp">照片</string>
    <string name="mine_xm">姓名</string>
    <string name="mine_sfzhm">身份证号码</string>
    <string name="mine_csrq">出生日期</string>
    <string name="mine_xb">性别</string>
    <string name="mine_hjd">户籍地</string>
    <string name="mine_mz">民族</string>
    <string name="mine_xjzd">现居住地</string>
    <string name="mine_jzqj">矫正期间</string>
    <string name="mine_jzlx">矫正类型</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="overtime_reason">超时原因：</string>
    <string name="overtime_cancellation">超时销假</string>
    <string name="please_input_overtime_reason">请输入超时的原因</string>
    <string name="identify_file">证明材料：</string>
    <string name="upload_image_fail">图片上传失败，请重试</string>
    <string name="replied">已答复</string>
    <string name="not_replied">未答复</string>
    <string name="replied2">已回复</string>
    <string name="not_replied2">未回复</string>
    <string name="cancel_leave_fail">销假失败，请重试</string>
    <string name="apply_time">申请时间：</string>
    <string name="picture_with_colon">图片：</string>
    <string name="cancel_status">销假状态：</string>
    <string name="approve_status">审批状态：</string>
    <string name="approve_advice">审批意见：</string>
    <string name="detail">详情</string>
    <string name="cancellation_overtime">超时销假</string>
    <string name="material">材料：</string>
    <string name="net_error">网络异常，请检查后重试</string>
    <string name="no_data">暂无数据</string>
    <string name="user_head_is_empty">该身份证用户未在后台上传头像，请联系工作人员</string>
    <string name="server_qxzzxfs">请选择咨询方式</string>
    <string name="watch_report">查看报告</string>
    <string name="answer_sheet">答题卡</string>
    <string name="ok">好的</string>
    <string name="tips">提示</string>
    <string name="server_hintknqk">请输入您遇到的困难</string>

    <!--    dialog-->
    <string name="dialog_bk">确定要提交补卡吗？</string>
    <string name="dialog_rcbg">确定要提交日常报告吗？</string>
    <string name="dialog_xlzx">确定要提交心理咨询吗？</string>
    <string name="dialog_xqflyz">确定要提交申请法律援助吗？</string>
    <string name="dialog_xqqlbz">确定要提交申请权利保障吗？</string>
    <string name="dialog_xqshjz">确定要提交申请社会救助吗？</string>
    <string name="user_privacy_agreement">用户隐私协议提醒</string>
    <string name="user_privacy_agreement_p1">在您使用我们的产品/服务时，需要确保已经连接移动网络或者WLAN，并可能产生流量费用，具体费用标准请咨询当地运营商。</string>
    <string name="user_privacy_agreement_p2">重点关注一下内容:</string>
    <string name="user_privacy_agreement_p4">1.基于业务场景下您的授权，我们会收集和使用您的个人信息及相关权限;\n2、我们可以访问、更正、删除您的个人信息，我们也提供账户注销功能;\n3、我们会采取合理可行的措施保护您的个人信息。</string>
    <string name="disagree_quit">不同意并退出</string>
    <string name="permission_download_deny">您已拒绝下载权限，请在设置中心开启权限</string>
    <string name="dialog_update_lately">暂不更新</string>
    <string name="dialog_update_now">立即更新</string>
    <string name="update_continue">继续更新</string>
    <string name="delay_continue">稍后更新</string>
    <string name="downloading">正在下载</string>
    <string name="invalid_id_number">该身份证未在后台录入</string>
    <string name="formatter_time">%1$tH:%1$tM</string>
</resources>
