<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".fragments.LoginFragment">

        <ImageView
            android:id="@+id/iv_login_background"
            android:layout_width="match_parent"
            android:layout_height="308.5dp"
            android:background="@mipmap/ic_login_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="82dp"
            android:src="@mipmap/ic_china_emblem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_login_background" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17.5dp"
            android:text="@string/welcome_to_app"
            android:textColor="#0D2E57"
            android:textSize="19dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/login_tips"
            android:textColor="#22D2D9"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="44dp"
            android:src="@mipmap/ic_login_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_login_background" />


        <EditText
            android:id="@+id/et_card_number"
            android:layout_width="wrap_content"
            android:minWidth="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="@string/login_card_number"
            android:textSize="13dp"
            android:maxLength="18"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="37.5dp"
            android:layout_marginTop="7.5dp"
            android:layout_marginEnd="37.5dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_card_number" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/iv_face_authentication"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="37.5dp"
            android:layout_marginTop="95.5dp"
            android:layout_marginEnd="37.5dp"
            android:background="@color/app_color"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:round="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_face_authentication"
            app:layout_constraintEnd_toEndOf="@+id/iv_face_authentication"
            app:layout_constraintStart_toStartOf="@+id/iv_face_authentication"
            app:layout_constraintTop_toTopOf="@+id/iv_face_authentication" />

        <ImageView
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:src="@mipmap/ic_login_cloud"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22.5dp"
            android:text="@string/provide_server"
            android:textColor="#999"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>