<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_app_background"
        tools:context=".ui.main.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bar_height"
                android:background="@color/app_color"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_19"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.youth.banner.Banner
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/dp_19"
                android:layout_marginEnd="@dimen/dp_19"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_height="@dimen/dp_143"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_78"
                android:layout_marginStart="@dimen/dp_19"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_marginEnd="@dimen/dp_19"
                android:background="@drawable/shape_white"
                app:layout_constraintTop_toBottomOf="@+id/banner">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="@dimen/dp_8">

                    <ImageView
                        android:id="@+id/iv_home_location"
                        android:layout_width="@dimen/dp_16"
                        android:layout_height="@dimen/dp_16"
                        android:layout_marginTop="@dimen/dp_2"
                        android:src="@mipmap/ic_main_location" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_6"
                        android:layout_toEndOf="@id/iv_home_location"
                        android:text="@string/current_location"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/tv_home_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_home_location"
                        android:layout_marginTop="@dimen/dp_8"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textSize="@dimen/sp_12"
                        tools:text="北京市大兴区于大娘艾玛呀马场北京市大兴区于大娘艾玛呀马场北京市大兴区于大娘艾玛呀马场北京市大兴区于大娘艾玛呀马场" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_whole_day_of_end"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/shape_main_time1">

                    <View
                        android:id="@+id/view_end_of_day_count"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/shape_main_time2" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/end_of_day"
                            android:textColor="@color/color_0D2E57"
                            android:textSize="@dimen/sp_15" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_end_of_day"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-medium"
                                android:textColor="@color/black"
                                android:textSize="@dimen/sp_20"
                                tools:text="186" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/dp_5"
                                android:gravity="center_horizontal"
                                android:text="@string/day"
                                android:textColor="@color/color_0D2E57"
                                android:textSize="@dimen/sp_15" />

                        </LinearLayout>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </RelativeLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_170"
                android:layout_marginStart="@dimen/dp_19"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_marginEnd="@dimen/dp_19"
                android:background="@drawable/shape_white"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="@dimen/dp_2"
                        android:layout_height="@dimen/dp_18"
                        android:background="@color/app_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/today_performance"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_17" />

                    <TextView
                        android:id="@+id/tv_today_performance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:text="@string/more"
                        android:textColor="@color/color_0D2E57"
                        android:textSize="@dimen/sp_14" />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_main_warn"
                        android:layout_width="match_parent"

                        android:layout_height="match_parent"
                        android:nestedScrollingEnabled="false"
                        android:padding="@dimen/dp_12"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="4"
                        tools:listitem="@layout/item_main_warm" />

                    <RelativeLayout
                        android:id="@+id/view_excellent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone">

                        <androidx.constraintlayout.utils.widget.ImageFilterView
                            android:layout_width="@dimen/dp_85"
                            android:layout_height="@dimen/dp_85"
                            android:layout_centerInParent="true"
                            android:background="@color/color_1DCA66"
                            app:roundPercent="1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/excellent"
                            android:textColor="@color/white"
                            android:textSize="@dimen/dp_30" />

                    </RelativeLayout>

                </RelativeLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_19"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_marginEnd="@dimen/dp_19"
                android:background="@drawable/shape_white"
                android:minHeight="@dimen/dp_150"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="@dimen/dp_2"
                        android:layout_height="@dimen/dp_18"
                        android:background="@color/app_color" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/notification"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_17" />

                    <TextView
                        android:id="@+id/tv_main_more_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:text="@string/more"
                        android:textColor="@color/color_0D2E57"
                        android:textSize="@dimen/sp_14" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_main_notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/dp_150"
                    android:padding="@dimen/dp_12"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="6"
                    tools:listitem="@layout/item_main_notification" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>